# QRUCIAL-DAO

./: .gitignore  LICENSE  README.md  node-health-check.py  node-setup.sh  node-start.sh  temp.db
.github/workflows/: qdao-node.yml
auditrep/: Cargo.toml  README.md  info.md
auditrep/src/: lib.rs
auditrep/version1/: Cargo.toml
auditrep/version1/src/: main.rs
auditrep/version2/src/: main.rs
docker/: README.md  docker_clean.sh
docker/files/: docker-compose.yml  dockerfile  qdao_services.sh
docker/files/scripts/: qdao_services.sh  supervisord.conf
docs/: QDAO_Full_Topology.drawio  Untitled Diagram.drawio
exosys/: Cargo.toml
exosys/src/: error.rs  main.rs
exosysd/: Cargo.toml
exosysd/src/: error.rs  main.rs
exotools/: .exotool.sh.swp  README.md  docker.sh  exotool.sh  exotool.sh.bak  info.md  lar.py  lar_fe_testing.py  log.txt  temp.db
exotools./static/a03f6ba3eb8141f0f8daee4ea016d4144f44fc4cba9e7477a4c1f041aaeb6c38./audit_files/extract/flipper/: Cargo.toml
exotools/audit_files/468b4af07508af26aff898453a654328ac718bd72acae83d81f2f7c7f131739fb507b606b804ecbea5554523bcdbc529efe69a7b0baaf57c56d0773038a2ca73_1658825421/: auditpack.tar
exotools/audits/asdf/audit_files/: program.tar
exotools/conf/: nginx.conf
exotools/configs/: nginx.conf
exotools/docker/docker_files/: README.md  dockerfile
exotools/docker/docker_files/scripts/: audit_script.sh
exotools/static/: index.html
exotools/static/testing/test_audit_tars/: exotestflipper.tar  sha512sums.txt
frontend/substrate-front-end-template/: README.md  config-overrides.js  package.json
frontend/substrate-front-end-template/public/: demoData.json  index.html  manifest.json
frontend/substrate-front-end-template/public/assets/: main.css
frontend/substrate-front-end-template/src/: About.js  AccountSelector.js  App.js  ApproveAuditor.js  AuditList.js  AuditRequests.js  AuditorButton.js  AuditorForm.js  AuditorPool.js  AuditorProfile.js  AuditorsPage.js  BasicModal.js  CancelAccount.js  ChallengeReportButton.js  ChallengeReportInputs.js  Challenges.js  CouncilPage.js  CreateProposal.js  Home.js  ReportButton.js  Reports.js  RequestAudit.js  Requestor.js  Signup.js  TopMenu.js  UpdateProfile.js  ViewChallenge.js  toastContent.js
frontend/substrate-front-end-template/src/config/: common.json
frontend/substrate-front-end-template/src/hooks/: useFormValidation.js  useTxAndPost.js
frontend/substrate-front-end-template/src/semantic-ui/: theme.config
frontend/substrate-front-end-template/src/semantic-ui/site/elements/: container.variables  label.variables  segment.variables
frontend/substrate-front-end-template/src/semantic-ui/site/globals/: site.variables
frontend/substrate-front-end-template/src/substrate-lib/components/: TxButton.js
frontend/substrate-front-end-template/src/template-comps/: Balances.js  BlockNumber.js  Events.js  Interactor.js  Metadata.js  NodeInfo.js  TemplateModule.js  Transfer.js  Upgrade.js
logger_and_reporter/: Cargo.toml  README.md
logger_and_reporter/python/: lar.py
logger_and_reporter/python/static/: index.html
logger_and_reporter/rust/src/: main.rs
python/: exotool_poc.py
python/examples/: send_extrinsics.py  type_registry.json  wssc.py  wsss.py
qdao-node/: .gitignore  Cargo.toml  rust-toolchain.toml
qdao-node/audit-pallet/: Cargo.toml  README.md
qdao-node/audit-pallet/src/: benchmarking.rs  elo_comp.rs  lib.rs  mock.rs  tests.rs
qdao-node/client/: Cargo.toml
qdao-node/client/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  command_helper.rs  main.rs  rpc.rs  service.rs
qdao-node/exo-pallet/: Cargo.toml
qdao-node/exo-pallet/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
qdao-node/pallet-dummy/src/: lib.rs
qdao-node/runtime/: Cargo.toml
qdao-node/runtime/src/: lib.rs
rust/: .gitignore  Cargo.toml
rust/client/src/: chain_spec.rs
rust/pallet-dummy/: Cargo.toml
rust/pallet-dummy/src/: lib.rs
rust/runtime/: Cargo.toml
rust/runtime/src/: lib.rs
