[package]
name = "qdao-exosysd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
async-stream = "0.3.3"
clap = { version = "3.2.5", features = ["env", "derive"] }
definitions = { git = "https://github.com/varovainen/parity-signer.git", branch = "va-2022-07-28-parser" }
desub = { git = "https://github.com/nathanwhit/desub.git", branch = "update-deps" }
frame-metadata = "15.0.0"
futures = "0.3.21"
futures-util = { version = "0.3.21", features = [] }
hex = "0.4.3"
jsonrpsee = { version = "0.10.1", features = ["full"] }
lazy_static = "1.4.0"
parity-scale-codec = "3.1.5"
parser_reworked = { git = "https://github.com/Alzymologist/substrate-parser.git" }
regex = "1.5.4"
serde_json = { version = "1.0.81", features = ["preserve_order"] }
sp-core = "6.0.0"
subxt = "0.21.0"
tokio = { version = "1.19.2", features = ["full"] }
tokio-scoped = "0.2.0"

