[package]
name = "qdao-exosysd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.5", features = ["env", "derive"] }
frame-metadata = "15.0.0"
hex = "0.4.3"
jsonrpsee = {version = "0.14.0", features = ["ws-client"]}
lazy_static = "1.4.0"
parity-scale-codec = "3.1.5"
parser_reworked = { git = "https://github.com/Alzymologist/substrate-parser.git" }
regex = "1.5.4"
serde_json = { version = "1.0.81", features = ["preserve_order"] }
sp-core = {git = "https://github.com/paritytech/substrate", default-features = false}
tokio = { version = "1.19.2", features = ["full"] }

