[package]
name = "qdao-node"
version = "0.0.1"
description = "Node binary for the QRUCIAL DAO chain."
authors = ["QRUCIAL Team <https://github.com/Qrucial>"]
homepage = "https://qrucial.io/"
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/Qrucial/QRUCIAL-DAO/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "qdao-node"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }

sc-cli = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", features = ["wasmtime"] }
sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", features = ["wasmtime"] }
sc-service = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", features = ["wasmtime"] }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-finality-grandpa = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-finality-grandpa = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-keyring = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git" }
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.15.1", features = ["server"] }
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-basic-authorship = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
frame-benchmarking-cli = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }

# Local Dependencies
qdao-runtime = { version = "0.0.1", path = "../runtime" }

# CLI-specific dependencies
try-runtime-cli = { version = "0.10.0-dev", optional = true, git = "https://github.com/paritytech/substrate.git" }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git" }

[features]
default = []
runtime-benchmarks = ["qdao-runtime/runtime-benchmarks"]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["qdao-runtime/try-runtime", "try-runtime-cli"]
