[package]
name = "qdao-exo-pallet"
version = "0.0.1"
description = "Dummy FRAME pallet example used in the runtime."
authors = ["QRUCIAL Team <https://github.com/Qrucial>"]
homepage = "https://qrucial.io/"
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/Qrucial/QRUCIAL-DAO/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-std = { version = "4.0.0", git="https://github.com/paritytech/substrate.git", default-features = false }

[dev-dependencies]
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }

[features]
default = ["std"]
std = ["codec/std", "frame-benchmarking/std", "frame-support/std", "frame-system/std", "scale-info/std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
