[package]
name = "qdao-runtime"
version = "0.0.1"
description = "Runtime crate for the QRUCIAL DAO chain."
authors = ["QRUCIAL Team <https://github.com/Qrucial>"]
homepage = "https://qrucial.io/"
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/Qrucial/QRUCIAL-DAO/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
syn = "1.0.97"

pallet-aura = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6" }
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6" }
pallet-grandpa = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6" }
pallet-randomness-collective-flip = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6" }
pallet-sudo = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6" }
frame-try-runtime = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6", optional = true }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6" }
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6" }
frame-executive = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6" }
sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6" }
sp-block-builder = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6" }
sp-consensus-aura = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6" }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6" }
sp-inherents = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6" }
sp-offchain = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6" }
sp-session = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6" }
sp-std = { version = "4.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6" }
sp-transaction-pool = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6" }
sp-version = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6" }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6" }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6" }

# Used for runtime benchmarking
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6", optional = true }
frame-system-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6", optional = true }
hex-literal = { version = "0.3.4", optional = true }

# Local Dependencies
qdao-exo-pallet = { version = "0.0.1", default-features = false, path = "../exo-pallet" }

[build-dependencies]
substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/paritytech/substrate.git", rev = "81c3d9e594668a32935a5eb7ce546912251aced6" }

[features]
default = ["std"]
std = ["codec/std", "scale-info/std", "frame-executive/std", "frame-support/std", "frame-system-rpc-runtime-api/std", "frame-system/std", "pallet-aura/std", "pallet-balances/std", "pallet-grandpa/std", "pallet-randomness-collective-flip/std", "pallet-sudo/std", "qdao-exo-pallet/std", "pallet-timestamp/std", "pallet-transaction-payment-rpc-runtime-api/std", "pallet-transaction-payment/std", "sp-api/std", "sp-block-builder/std", "sp-consensus-aura/std", "sp-core/std", "sp-inherents/std", "sp-offchain/std", "sp-runtime/std", "sp-session/std", "sp-std/std", "sp-transaction-pool/std", "sp-version/std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks", "frame-support/runtime-benchmarks", "frame-system-benchmarking", "frame-system/runtime-benchmarks", "hex-literal", "pallet-balances/runtime-benchmarks", "pallet-grandpa/runtime-benchmarks", "qdao-exo-pallet/runtime-benchmarks", "pallet-timestamp/runtime-benchmarks", "sp-runtime/runtime-benchmarks"]
try-runtime = ["frame-executive/try-runtime", "frame-try-runtime", "frame-system/try-runtime", "pallet-aura/try-runtime", "pallet-balances/try-runtime", "pallet-grandpa/try-runtime", "pallet-randomness-collective-flip/try-runtime", "pallet-sudo/try-runtime", "qdao-exo-pallet/try-runtime", "pallet-timestamp/try-runtime", "pallet-transaction-payment/try-runtime"]
